@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-22T00:29:29Z",
-  "count_outdated" : 276,
-  "uniques_outdated" : 53,
+  "timestamp" : "2022-04-24T00:26:10Z",
+  "count_outdated" : 282,
+  "uniques_outdated" : 54,
   "count" : 302,
   "uniques" : 61,
   "views" : [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 1,
